Loging and Register api done with working condidtion

--- a/QuizProdigy-Angular/src/app/components/login/login.component.html
+++ b/QuizProdigy-Angular/src/app/components/login/login.component.html
@@ -19,8 +19,8 @@
           placeholder="Enter Email"
           class="input-field"
           type="email"
-          formControlName="email"
-          (blur)="validateEmail(loginForm.value.email)"
+          formControlName="userId"
+          (blur)="validateEmail(loginForm.value.userId)"
         />
     </div>
     <div class="emailCheck" *ngIf="emailCheck">
