--- a/QuizProdigy-Angular/src/styles.css
+++ b/QuizProdigy-Angular/src/styles.css
@@ -7,4 +7,9 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #1c1a1a;
+  color: #fff;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
