--- a/QuizProdigy-Angular/src/app/components/modules/teacher/components/set-paper/set-paper.component.css
+++ b/QuizProdigy-Angular/src/app/components/modules/teacher/components/set-paper/set-paper.component.css
@@ -1,62 +1,70 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* background-color: white; */
-    color: wheat;
-  }
-  .card{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 40vw;
-  }
-  .input-container {
-      position: relative;
-      margin: 50px auto;
-      width: 200px;
-    }
-    
-    .input-container input[type="text"] {
-      font-size: 20px;
-      width: 100%;
-      border: none;
-      border-bottom: 2px solid #ccc;
-      padding: 5px 0;
-      background-color: transparent;
-      outline: none;
-    }
-    
-    .input-container .label {
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: #ccc;
-      transition: all 0.3s ease;
-      pointer-events: none;
-    }
-    
-    .input-container input[type="text"]:focus ~ .label,
-    .input-container input[type="text"]:valid ~ .label {
-      top: -20px;
-      font-size: 16px;
-      color: #d7d7d7;
-    }
-    
-    .input-container .underline {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      height: 2px;
-      width: 100%;
-      background-color: #d7d7d7;
-      transform: scaleX(0);
-      transition: all 0.3s ease;
-    }
-    
-    .input-container input[type="text"]:focus ~ .underline,
-    .input-container input[type="text"]:valid ~ .underline {
-      transform: scaleX(1);
-    }
-    
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  /* background-color: white; */
+  color: wheat;
+  height: 90vh;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80vw;
+}
+
+
+
+.input-container {
+  position: relative;
+  margin: 50px;
+  width: 200px;
+}
+
+.input-container input[type="text"] {
+  font-size: 20px;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  padding: 5px 0;
+  background-color: transparent;
+  outline: none;
+}
+
+.input-container .label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #ccc;
+  transition: all 0.3s ease;
+  pointer-events: none;
+}
+
+.input-container input[type="text"]:focus ~ .label,
+.input-container input[type="text"]:valid ~ .label {
+  top: -20px;
+  font-size: 16px;
+  color: #d7d7d7;
+}
+
+form button {
+  margin-left: 50px;
+  margin-bottom: 10px;
+}
+
+.input-container .underline {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #d7d7d7;
+  transform: scaleX(0);
+  transition: all 0.3s ease;
+}
+
+.input-container input[type="text"]:focus ~ .underline,
+.input-container input[type="text"]:valid ~ .underline {
+  transform: scaleX(1);
+}
