Create Admin Dashboard

--- a/QuizProdigy-Angular/src/app/components/modules/teacher/components/navbar/navbar.component.html
+++ b/QuizProdigy-Angular/src/app/components/modules/teacher/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   
     <span id="menuTitle">QuizProdigy</span>
     <div class="nav-buttons">
-      <a mat-button routerLink="/teacher" class="top-menu-item">Home</a>
+      <a mat-button routerLink="/teacher" class="top-menu-item">Homesdf</a>
       <a mat-button routerLink="/teacher/setPaper" class="top-menu-item"
         >Set Question Paper</a
       >
