--- a/QuizProdigy-Angular/src/app/components/modules/teacher/components/set-exam/set-exam.component.css
+++ b/QuizProdigy-Angular/src/app/components/modules/teacher/components/set-exam/set-exam.component.css
@@ -18,17 +18,41 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
-#stepper{
+#stepper, .stepper{
+  background-color: rgb(33, 33, 33);
+  height: 100%;
   width: 100%;
+
 }
-.container {
+.main-container {
   height: 90vh;
   display: flex;
   width: 100%;
   justify-content: center;
   overflow: hidden;
 }
-
+.step{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.exam-details{
+  width: 500px;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  border-radius: 6px;
+  justify-content: center;
+  flex-direction: column;
+  background-color: lightgreen;
+}
+.input{
+  border-radius: 6px;
+  outline: none;
+  border: none;
+  padding: 6px 10px;
+}
 .handsOn {
   display: flex;
   flex-direction: row;
@@ -97,8 +121,23 @@ input::-webkit-inner-spin-button {
 }
 
 .form label {
+  /* display: block; */
   position: relative;
-  margin: 8px;
+  /* margin: 8px; */
+}
+.input-label{
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.question-container .option{
+  width: 400px;
+  background-color: #adc6a6;
+  display: flex;
+  justify-content: space-between;
 }
 
 .form label .input {
@@ -170,3 +209,48 @@ input::-webkit-inner-spin-button {
 
 /* *********************************************************************************************************** */
 
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+/* .question-container {
+  margin-bottom: 20px;
+}
+
+.question, .options, .answer {
+  margin-bottom: 10px;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.option {
+  margin-top: 5px;
+}
+
+.option label {
+  margin-right: 5px;
+} */
+
+input[type="text"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0,123,255,0.5);
+}
+
+.option1{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
