Added Video Capture Feature while starting exam

--- a/QuizProdigy-Angular/src/app/components/modules/admin/components/home/home.component.html
+++ b/QuizProdigy-Angular/src/app/components/modules/admin/components/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<!-- <mat-card>
     <div class="card">
       <div class="message">
           <h3>This div for manage student</h3>
@@ -23,4 +23,5 @@
           </div>
     </div>
   </mat-card>
-  
+   -->
+
