--- a/QuizProdigy-Angular/src/app/components/modules/student/components/do-exam/do-exam.component.html
+++ b/QuizProdigy-Angular/src/app/components/modules/student/components/do-exam/do-exam.component.html
@@ -115,8 +115,10 @@
     opened
     class="camera"
   >
+
+  <!-- Video Camera for tracking -->
     <div class="videoCamera">
-      <video id="video"  autoplay></video>
+      <video id="video" #videoElement autoplay></video>
     </div>
     <div class="userName"><h3>Rahul Kumar</h3></div>
     <button mat-raised-button>Need Help</button>
